--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
 </head>
 
 <body>
@@ -40,22 +40,24 @@
 
         <section class="section">
             <h2 class="section__title">Style and Moves</h2>
-            <img class="section__img-inline" src="img/pexels-sabine-freiberger-16788877.jpg" alt="" />
-            <div class="section__text-inline">
-                <p>
-                    Seals are known for their elegant swimming skills, often rivalling
-                    those of top-tier Olympic swimmers. Their flippers, akin to
-                    well-trained athletes, effortlessly guide them through water with a
-                    mesmerizing grace.
-                </p>
-                <p>
-                    A fascinating aspect is their natural insulation: layers of blubber.
-                    This built-in warmth mechanism allows them to thrive in various
-                    water temperatures. Picture these creatures gliding beneath the
-                    water's surface – a seamless dance with currents, their streamlined
-                    bodies moving with fluidity and elegance. It's a testament to
-                    nature's adaptability and the awe-inspiring beauty of aquatic life.
-                </p>
+            <div class="section__inline-container">
+                <img class="section__img-inline" src="img/pexels-sabine-freiberger-16788877.jpg" alt="" />
+                <div class="section__text-inline">
+                    <p>
+                        Seals are known for their elegant swimming skills, often rivalling
+                        those of top-tier Olympic swimmers. Their flippers, akin to
+                        well-trained athletes, effortlessly guide them through water with a
+                        mesmerizing grace.
+                    </p>
+                    <p>
+                        A fascinating aspect is their natural insulation: layers of blubber.
+                        This built-in warmth mechanism allows them to thrive in various
+                        water temperatures. Picture these creatures gliding beneath the
+                        water's surface – a seamless dance with currents, their streamlined
+                        bodies moving with fluidity and elegance. It's a testament to
+                        nature's adaptability and the awe-inspiring beauty of aquatic life.
+                    </p>
+                </div>
             </div>
         </section>
 
@@ -98,24 +100,26 @@
 
         <section class="section">
             <h2 class="section__title">Cool Facts About Seals</h2>
-            <img class="section__img-inline" src="img/pexels-daniel-lee-3187036.jpg" alt="" />
-            <div class="section__text-inline">
-                <p>
-                    Dive into the world of seals, those charming sea creatures with a
-                    flair for the extraordinary. From holding their breath like
-                    underwater champs to using their whiskers for underwater GPS, these
-                    marine wonders are quite the showstoppers.
-                </p>
-                <p>
-                    Seals rock the art of breath-holding, making any professional diver
-                    green with envy. And those whiskers? They're like nature's very own
-                    GPS, guiding these underwater explorers through their aquatic
-                    escapades.
-                </p>
-                <p>
-                    For a deeper dive into seal awesomeness, visit
-                    <a href="#">sealworld.com</a>
-                </p>
+            <div class="section__inline-container">
+                <img class="section__img-inline" src="img/pexels-daniel-lee-3187036.jpg" alt="" />
+                <div class="section__text-inline">
+                    <p>
+                        Dive into the world of seals, those charming sea creatures with a
+                        flair for the extraordinary. From holding their breath like
+                        underwater champs to using their whiskers for underwater GPS, these
+                        marine wonders are quite the showstoppers.
+                    </p>
+                    <p>
+                        Seals rock the art of breath-holding, making any professional diver
+                        green with envy. And those whiskers? They're like nature's very own
+                        GPS, guiding these underwater explorers through their aquatic
+                        escapades.
+                    </p>
+                    <p>
+                        For a deeper dive into seal awesomeness, visit
+                        <a href="#">sealworld.com</a>
+                    </p>
+                </div>
             </div>
         </section>
     </main>
@@ -131,6 +135,3 @@
 </body>
 
 </html>
-
-
-
